[package]
name = "ezk-image"
version = "0.2.1"
edition = "2021"
description = "Convert pixel and color formats such and RGB, YUV (YCbCr), ICtCp"
categories = ["multimedia", "multimedia::images", "multimedia::video"]
keywords = ["color", "video", "RGB", "YUV", "convert"]
readme = "README.md"
repository = "https://github.com/kbalt/ezk-image"
license = "MIT"
documentation = "https://docs.rs/ezk-image"

exclude = ["tests"]

[dependencies]
thiserror = "2"

rayon = { version = "1.9", optional = true }
num_cpus = { version = "1.0", optional = true }
fir = { package = "fast_image_resize", version = "5", optional = true }

[features]
default = ["multi-thread", "resize"]

# Enable multi threading for image conversion
multi-thread = ["dep:rayon", "dep:num_cpus"]

# Include Resizer using fast_image_resize
resize = ["dep:fir"]

# Enable features that are incomplete, untested and/or require a nightly compiler
unstable = []

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
nalgebra = "0.33"

criterion = "0.5"

[[bench]]
name = "pixel_format"
harness = false
